index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
* {
	font-family: Roboto Mono; 
	font-weight: normal;
  }
  body {
	  width: 600px; 
	  margin: 0 auto;
  }
  #yosemite img{
	border: 4px solid transparent;   
	border-radius: 50%;
	width: 20%;
  }
  .visit{
	text-decoration:none;
  }
  .park{
	text-decoration: none; 
  }
  .involved{
	text-decoration: none; 
  }
  h1{
	font-family: chelsea market;
	text-align: center; 
	margin: auto; 
  }
  section {
	background-color: #DDB9A3;
  }
  footer {
	background-color: #F9E7DC;
  }
  #bold1 {
	font-weight: 700;
  }
  #bold2{
	font-weight: 700;
  }
.visit .park .involved{
	border-radius: 25px; 
}

#fire img{
	width: 10%; 
	border: 4px solid transparent; 
	height: auto; 
	display: block; 
	margin-left: auto;
	margin-right: auto; 
}
#truck img{
	width: 10%;
	border: 4px solid transparent; 
	display: block; 
	margin-left: auto;
	margin-right: auto; 
	height: auto; 
}
#footerp img{
	width: 100%;
	height: 10%;
	border: 4px solid transparent; 
	padding-top: 4rem; 
	padding-bottom: 1rem; 
} 

.orangebutton{
	width: 100px; 
	border: 3px solid transparent;
	border-radius: 25px; 
	background-color: #FF764E;
	margin-left: 10%;
	margin-right: 10%;  
	margin-top: 10px; 
	height: auto; 
}
.bluebutton{
	width: 100px; 
	border: 3px solid transparent; 
	border-radius: 25px;
	background-color: #5ED3EB;
	margin-left: 40px;
	margin-right: 40px; 
	margin-top: 10px; 
	margin-bottom: 20px; 
	height: auto; 
}
.yellowbutton{
	width: 100px;
	border: 3px solid transparent; 
	border-radius: 25px; 
	background-color: #FFCD69;
	margin-left: 30%;
	margin-right: auto; 
	height: auto; 
}

  

